--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 				</section>
 				<section data-markdown>
 					<script type="text/template">
-						## Functor Law
+						## Functor Laws
 
 						```haskell
 						--Identity
@@ -186,19 +186,109 @@
 							(<*>) :: f (a -> b) -> f a -> f b
 							(<$>) :: (Functor f) => (a -> b) -> f a -> f b
 							f <$> x = fmap f x
+						instance Applicative [] where
+							pure x = [x]
+							fs <*> xs = [f x | f <- fs, x <- xs]
 						```
 
 						```clojure
+						(defprotocol Applicative
+						  (pure [functor f])
+						  (<*> [fs xs])
+						  (<$> [xs f]))
+						(defrecord List [value]
+						  Applicative
+						  (pure [_ f]
+						    (->List [f]))
+						  (<*> [fs xs]
+						    (->List (for [f (:value fs)
+						                  x (:value xs)]
+						              (f x))))
+						  (<$> [xs f]
+						    (fmap xs f)))
+						(extend-type List
+						  Functor
+						  (fmap [functor f]
+						    (->List (map f (:value functor)))))
+						```
+					</script>
+				</section>
+				<section data-markdown>
+					<script type="text/template">
+						## some examples
+
+						```haskell
+						Prelude Control.Applicative> [(*0),(+100),(^2)] <*> [1,2,3]
+						[0,0,0,101,102,103,1,4,9]
+						Prelude Control.Applicative> (++) <$> ["ha","heh","hmm"] <*> ["?","!","."]
+						["ha?","ha!","ha.","heh?","heh!","heh.","hmm?","hmm!","hmm."]
+						```
+
+						```clojure
+						(:value (let [fs (->List [#(* 2 %) #(+ 10 %)])
+									  xs (->List [1 2 3])]
+									  (<*> fs xs)))
+						;;=> (2 4 6 11 12 13)
+						(:value (let [g (pure (->List nil) #(* 50 %))
+									  xs (->List [1 2 3])]
+									  (<*> g xs)))
+						;;=> (50 100 150)
+						```
+					</script>
+				</section>
+				<section data-markdown>
+					<script type="text/template">
+						## Applicative Functor Laws
+
+						```haskell
+						--Identity
+						pure f <*> v = fmap f v
+
+						--Composition
+						pure (.) <*> u <*> v <*> w = u <*> (v <*> w)
+
+						--Homomorphism
+						pure f <*> pure x = pure (f x)
+
+						--Interchange
+						u <*> pure y = pure ($ y) <*> u
+						```
+					</script>
+				</section>
+				<section data-markdown>
+					<script type="text/template">
+						## Applicative Functor Laws
+
+						```clojure
 						;;Identity
-						(let [list-functor (List. [1 2 3])]
-							(= (fmap list-functor identity)
-							(identity list-functor)))
+						(let [f #(+ 2 %)
+						      v (->List [10])]
+						  (= (<*> (pure (->List nil) f) v)
+						     (fmap v f)))
+
 						;;Composition
-						(let [f #(+ 10 %)
-							  g #(* 2 %)
-							  list-functor (List. [1 2 3])]
-							(= (fmap list-functor (comp f g))
-							   (-> list-functor (fmap g) (fmap f))))
+						(let [u (->List [#(* 2 %)])
+						      v (->List [#(+ 10 %)])
+						      w (->List [1 2 3])]
+						  (= (-> (pure (->List nil) (fn [x] (partial comp x)))
+						         (<*> u)
+						         (<*> v)
+						         (<*> w))
+						     (<*> u (<*> v w))))
+
+						;;Homomorphism 同质性
+						(let [f #(* 2 %)
+						      x 10]
+						  (= (-> (pure (->List nil) f)
+						         (<*> (pure (->List nil) x)))
+						     (pure (->List nil) (f x))))
+
+						;;Interchange 交换性
+						(let [u (pure (->List nil) #(+ 10 %))
+						      y 50
+						      $ (fn [y] #(% y))]
+						  (= (<*> u (pure (->List nil) y))
+						     (<*> (pure (->List nil) ($ y)) u)))
 						```
 					</script>
 				</section>
