update subtitle for slide

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<div class="slides">
 				<section>
 					<h1>Monad</h1>
-					<p>from a clojure programmer's perspective</p>
+					<p>from a programmer's perspective</p>
 					<e>@zjh</e>
 				</section>
 				<section>
